add some porperties in main section

--- a/style.css
+++ b/style.css
@@ -336,6 +336,10 @@ header .hero{
 /* *********************************************************************************************************
 Start main section styling 
 ********************************************************************************************************* */
+main{
+    width: 100%;
+    overflow-x: hidden !important;
+}
 main section{
     width: 100%;
     margin-bottom: 70px !important;
