--- a/gallary.css
+++ b/gallary.css
@@ -18,6 +18,7 @@ header .navBottom ul li a{
 header .gallaryHero{
     width: 100%;
     min-height: 400px;
+    display: none;
 }
 .gallaryHero .owlBox{
     position: relative;
@@ -58,10 +59,6 @@ main.gallaryMain{
     padding: 20px 0;
     background: #fff;
     box-shadow: 0px 0px 10px rgba(149, 148, 148, 0.552), 0px 0px 10px #b0e9fe98 inset ;
-    position: sticky;
-    top: 70px;
-    left: 0;
-    z-index: 998;
 }
 .gallaryHeading button{
     padding: 8px 15px;
